e2e/agic/sslprofile/input/ingress-ssl-profile.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-profile: whatever
spec:
  tls:
    - hosts:
        - contoso.com
      secretName: my-secret
  rules:
    - host: contoso.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: contoso-service
                port:
                  number: 80
            pathType: Exact
